--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,8 @@
 name: Sync with Gitee
 
 on:
- 
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # 每天午夜（UTC时间）运行
 jobs:
   giteepush:
     runs-on: ubuntu-latest
