--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
   giteepush:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4 
       - name: Configure Private Key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
@@ -20,6 +21,29 @@ jobs:
         env:
           SOURCE_REPO: 'https://boringssl.googlesource.com/boringssl.git'
           DESTINATION_REPO: 'git@gitee.com:fenghuolingyun/boringssl.git'
+        run: |
+          git clone --mirror "$SOURCE_REPO" && cd `basename "$SOURCE_REPO"`
+          git remote set-url --push origin "$DESTINATION_REPO"
+          git fetch -p origin
+          git for-each-ref --format 'delete %(refname)' refs/pull | git update-ref --stdin
+          git push --mirror		  
+  githubpush:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4 
+      - name: Configure Private Key
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          echo "StrictHostKeyChecking no" >> ~/.ssh/config
+
+      - name: Sync with Gitee
+        env:
+          SOURCE_REPO: 'git://git.proxmox.com/git/pmg-gui.git'
+          DESTINATION_REPO: 'git@github.com:wy414012/pmg-gui.git'
         run: |
           git clone --mirror "$SOURCE_REPO" && cd `basename "$SOURCE_REPO"`
           git remote set-url --push origin "$DESTINATION_REPO"
