--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,28 +9,25 @@ on:
 
 jobs:
   build:
-    name: build
-    runs-on: ubuntu-latest
-    env:
-      JOB_TYPE: BUILD
+    runs-on: Linux
     steps:
-      - uses: actions/checkout@v4
-      - name: update sources.list
-        run:  sudo apt update
+    - uses: actions/checkout@v4
+    - name: update sources.list
+      run:  sudo apt update
 
-      - name: install tools
-        run: sudo apt-get -y install devscripts equivs
-    
-      - name: install deps    
-        run: yes| sudo mk-build-deps --install
-        
-      - name: remove deps
-        run: yes| sudo mk-build-deps --install --remove
-      - name: clone pve-kernel
-      - run: |
-          git clone git://git.proxmox.com/git/pve-kernel.git && cd pve-kernel
-          yes| sudo mk-build-deps --install
+    - name: install tools
+      run: sudo apt-get -y install devscripts equivs
       
-      - name: make deb
-        run: make deb
+    - name: clone pve-kernel
+    - run: |
+          git clone git://git.proxmox.com/git/pve-kernel.git && cd pve-kernel
+          
+    - name: install deps    
+      run: yes| sudo mk-build-deps --install
+        
+    - name: remove deps
+      run: yes| sudo mk-build-deps --install --remove
+        
+    - name: run make
+      run: make deb
         
