--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,11 @@ jobs:
     - name: install tools
       run: sudo apt-get -y install devscripts equivs
       
-    - name: clone pve-kernel
-      run: git clone git://git.proxmox.com/git/pve-kernel.git && cd pve-kernel
+    - name: clone pve-qemu
+      run: git clone git://git.proxmox.com/git/pve-qemu.git
           
     - name: install deps    
-      run: yes| sudo mk-build-deps --install
-        
-    - name: remove deps
-      run: yes| sudo mk-build-deps --install --remove
+      run: cd pve-qemu && yes| sudo mk-build-deps --install
         
     - name: run make
       run: make deb
